Created seller endpoints

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,1 +1,23 @@
 PORT = 4000
+
+DB_HOST = "localhost"
+DB_USER = "root"
+DATABASE = "fullstack_ecommerce"
+DB_PASSWORD = 
+
+SMTP_SERVICE = gmail
+SMTP_MAIL = 
+SMTP_PASS = 
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 465
+
+JWT_SECRET = 
+JWT_ADMIN_SECRET = 
+JWT_SELLER_SECRET = 
+JWT_EXPIRE = 5d
+
+COOKIE_EXPIRE = 5
+
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
