--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.9.7",
+    "mysql2": "^3.10.0",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.2",
     "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
