--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,18 +19,17 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.6",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "redux-thunk": "^3.1.0",
-    "styled-components": "^6.1.11"
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
